--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "preline": "^2.4.1"
+        "apexcharts": "^4.0.0",
+        "lodash": "^4.17.21",
+        "preline": "^2.5.1",
+        "react-icons": "^5.3.0"
     }
 }
